# log-csi

./: .env.example  LICENSE  README.md  pyproject.toml
profiles/: generic_iso.yaml
src/log_csi/: cli.py  config.py  models.py
src/log_csi/parser/: regex_multiline.py
src/log_csi/storyline/: summarize.py
